Formatting improves to SSH config

--- a/home/ssh/config
+++ b/home/ssh/config
@@ -1,259 +1,206 @@
-#===============================================================================
-# Personal
-#===============================================================================
-Host gunwatcher gunwatcher.joshuaspence.com
-    Hostname gunwatcher.joshuaspence.com
-    User ec2-user
-    IdentityFile ~/.ssh/keys/ec2
+#/
+## @author Joshua Spence
+## @file ~/.ssh/config
+#\
 
-    ForwardAgent no
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
 
-Host pear pear.joshuaspence.com
-    Hostname pear.joshuaspence.com
-    User ec2-user
-    IdentityFile ~/.ssh/keys/ec2
+## Personal #{{{
+    Host gunwatcher gunwatcher.joshuaspence.com
+        Hostname gunwatcher.joshuaspence.com
+        User ec2-user
+        IdentityFile ~/.ssh/keys/ec2
 
-    ForwardAgent no
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent no
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
 
-#===============================================================================
-# Home
-#===============================================================================
-Host home home.ddns.joshuaspence.com
-    Hostname home.ddns.joshuaspence.com
-    User root
-    IdentityFile ~/.ssh/keys/home
+    Host pear pear.joshuaspence.com
+        Hostname pear.joshuaspence.com
+        User ec2-user
+        IdentityFile ~/.ssh/keys/ec2
 
-    ForwardAgent yes
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent no
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
+## #}}}
 
-#===============================================================================
-# Launchpad
-#===============================================================================
-Host launchpad bazaar.launchpad.net
-    Hostname bazaar.launchpad.net
-    User joshuaspence
-    IdentityFile  ~/.ssh/keys/launchpad
+## Home #{{{
+    Host home home.ddns.joshuaspence.com
+        Hostname home.ddns.joshuaspence.com
+        User root
+        IdentityFile ~/.ssh/keys/home
 
-    ForwardAgent yes
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent yes
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
+## #}}}
 
-#===============================================================================
-# ScribTex
-#===============================================================================
-Host scribtex git.scribtex.com
-    Hostname git.scribtex.com
-    User joshuaspence
-    IdentityFile  ~/.ssh/keys/scribtex
+## Launchpad #{{{
+    Host launchpad bazaar.launchpad.net
+        Hostname bazaar.launchpad.net
+        User joshuaspence
+        IdentityFile  ~/.ssh/keys/launchpad
 
-    ForwardAgent no
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent yes
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
+#}}}
 
-#===============================================================================
-# GitHub
-#===============================================================================
-Host github git.github.com
-    Hostname git.github.com
-    User git
-    IdentityFile  ~/.ssh/keys/github
+## GitHub #{{{
+    Host github git.github.com
+        Hostname git.github.com
+        User git
+        IdentityFile  ~/.ssh/keys/github
 
-    ForwardAgent no
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent no
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
+## #}}}
 
-#===============================================================================
-# Freelancer
-#===============================================================================
-Host analytics01 analytics01.freelancer.com
-    HostName analytics01.freelancer.com
-    User joshua
-    IdentityFile ~/.ssh/keys/freelancer
+## Freelancer #{{{
+    Host analytics01 analytics01.freelancer.com
+        HostName analytics01.freelancer.com
+        User joshua
+        IdentityFile ~/.ssh/keys/freelancer
 
-    ForwardAgent yes
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent yes
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
 
-Host local-staging josh.syd.local 10.0.0.2
-    HostName josh.syd.local
-    User freelancer
-    IdentityFile ~/.ssh/keys/vagrant
+    Host local-staging josh.syd.local 10.0.0.2
+        HostName josh.syd.local
+        User freelancer
+        IdentityFile ~/.ssh/keys/vagrant
 
-    ForwardAgent no
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent no
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
 
-Host staging3 staging3.freelancer.com
-    HostName staging3.freelancer.com
-    User staging-josh
-    IdentityFile ~/.ssh/keys/freelancer
+    Host staging3 staging3.freelancer.com
+        HostName staging3.freelancer.com
+        User staging-josh
+        IdentityFile ~/.ssh/keys/freelancer
 
-    ForwardAgent yes
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent yes
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
 
-Host db-slave-stats-tunnel
-    HostName analytics01.freelancer.com
-    User joshua
-    IdentityFile ~/.ssh/keys/freelancer
+    Host db-slave-stats-tunnel
+        HostName analytics01.freelancer.com
+        User joshua
+        IdentityFile ~/.ssh/keys/freelancer
 
-    ForwardAgent no
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
-    
-    # Port forwarding
-    ExitOnForwardFailure yes
-    LocalForward 3306 db-slave-stats.freelancer.com:3306
+        ForwardAgent no
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
+        
+        # Port forwarding
+        ExitOnForwardFailure yes
+        LocalForward 3306 db-slave-stats.freelancer.com:3306
 
-Host freelancer-git git.freelancer.com
-    HostName git.freelancer.com
-    User git
-    IdentityFile ~/.ssh/keys/git.freelancer.com
+    Host freelancer-git git.freelancer.com
+        HostName git.freelancer.com
+        User git
+        IdentityFile ~/.ssh/keys/git.freelancer.com
 
-    ForwardAgent no
-    IdentitiesOnly yes
-    PasswordAuthentication no
-    PubkeyAuthentication yes
+        ForwardAgent no
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
+## #}}}
 
-#===============================================================================
-# Global
-#===============================================================================
+## Global #{{{
 Host *
+    ## Specifies whether user authentication based on GSSAPI is allowed.
     ##
-    # Specifies whether user authentication based on GSSAPI is allowed.
-    #
-    # @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    ##
+    ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
     GSSAPIAuthentication no
 
+    ## If the network disappears your connection will hang, but if it then
+    ## re-appears with 10 minutes it will resume working.
     ##
-    # If the network disappears your connection will hang, but if it then
-    # re-appears with 10 minutes it will resume working.
-    #
-    # @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    #
-    TCPKeepAlive no
-    ServerAliveInterval 60
-    ServerAliveCountMax 10
+    ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
+    ## #{{{
+        TCPKeepAlive no
+        ServerAliveInterval 60
+        ServerAliveCountMax 10
+    ## #}}}
 
-    ##
-    # If this flag is set to "yes", `ssh` will additionally check the host IP
-    # address in the "~/.ssh/known_hosts" file. This allows ssh to detect if a
-    # host key changed due to DNS spoofing. If the option is set to "no", the
-    # check will not be executed.
-    ##
+    ## If this flag is set to "yes", `ssh` will additionally check the host IP
+    ## address in the `~/.ssh/known_hosts` file. This allows ssh to detect if a
+    ## host key changed due to DNS spoofing. If the option is set to "no", the
+    ## check will not be executed.
     CheckHostIP yes
 
-    ##
-    # Specifies whether to use compression.
-    ##
+    ## Specifies whether to use compression.
     Compression no
 
+    ## Enables the sharing of multiple sessions over a single network
+    ## connection. When set to "yes", `ssh` will listen for connections on a
+    ## control socket specified using the "ControlPath" argument. Additional
+    ## sessions can connect to this socket using the same "ControlPath" with
+    ## "ControlMaster" set to "no" (the default). These sessions will try to
+    ## reuse the master instance's network connection rather than initiating new
+    ## ones, but will fall back to connecting normally if the control socket
+    ## does not exist, or is not listening.
     ##
-    # Enables the sharing of multiple sessions over a single network connection.
-    # When set to "yes", `ssh` will listen for connections on a control socket
-    # specified using the ControlPath argument. Additional sessions can connect
-    # to this socket using the same ControlPath with ControlMaster set to "no"
-    # (the default). These sessions will try to reuse the master instance's
-    # network connection rather than initiating new ones, but will fall back to
-    # connecting normally if the control socket does not exist, or is not
-    # listening.
-    #
-    # @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    ##
-    #ControlMaster auto
-    #ControlPath /tmp/ssh_mux_%h_%p_%r
+    ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
+    ## #{{{
+        #ControlMaster auto
+        #ControlPath /tmp/ssh_mux_%h_%p_%r
+        #ControlPersist 4h
+    ## #}}}
 
-    ##
-    # When used in conjunction with ControlMaster, specifies that the master
-    # connection should remain open in the background (waiting for future client
-    # connections) after the initial client connection has been closed.
-    #
-    # If set to "no", then the master connection will not be placed into the
-    # background, and will close as soon as the initial client connection is
-    # closed.
-    #
-    # If set to "yes", then the master connection will remain in the background
-    # indefinitely (until killed or closed via a mechanism such as the `ssh`
-    # "-O exit" option). If set to a time in seconds then the backgrounded
-    # master connection will automatically terminate after it has remained idle
-    # (with no client connections) for the specified time.
-    #
-    # @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    ##
-    ControlPersist 4h
-
-    ##
-    # Specifies whether the connection to the authentication agent (if any) will
-    # be forwarded to the remote machine.
-    ##
+    ## Specifies whether the connection to the authentication agent (if any)
+    ## will be forwarded to the remote machine.
     ForwardAgent no
 
-    ##
-    # Specifies whether X11 connections will be automatically redirected over
-    # the secure channel and DISPLAY set.
-    ##
-    ForwardX11 no
-    ForwardX11Trusted yes
+    ## Specifies whether X11 connections will be automatically redirected over
+    ## the secure channel and DISPLAY set.
+    ## #{{{
+        ForwardX11 no
+        ForwardX11Trusted yes
+    ## #}}}
 
-    ##
-    # lsSpecifies that `ssh` should only use the authentication identity files
-    # configured in the ssh_config files, even if `ssh-agent` offers more
-    # identities. The argument to this keyword must be "yes" or "no". This
-    # option is intended for situations where `ssh-agent` offers many different
-    # identities.
-    ##
+    ## Specifies that `ssh` should only use the authentication identity files
+    ## configured in the SSH config files, even if `ssh-agent` offers more
+    ## identities. The argument to this keyword must be "yes" or "no". This
+    ## option is intended for situations where `ssh-agent` offers many different
+    ## identities.
     #IdentitiesOnly no
 
-    ##
-    # Specifies whether to use password authentication. The argument to this
-    # keyword must be "yes" or "no".
-    ##
+    ## Specifies whether to use password authentication. The argument to this
+    ## keyword must be "yes" or "no".
     PasswordAuthentication yes
 
-    ##
-    # Allow local command execution via the LocalCommand option or using the
-    # `!command` escape sequence in `ssh`. The argument must be "yes" or "no".
-    ##
+    ## Allow local command execution via the "LocalCommand" option or using the
+    ## `!command` escape sequence in `ssh`. The argument must be "yes" or "no".
     PermitLocalCommand no
 
-    ##
-    # Specifies the protocol versions ssh should support in order of preference.
-    # The possible values are '1' and '2'. Multiple versions must be
-    # comma-separated.
-    ##
+    ## Specifies the protocol versions `ssh` should support in order of
+    ## preference. The possible values are "1" and "2". Multiple versions must
+    ## be comma-separated.
     Protocol 2
 
-    ##
-    # Specifies whether to try public key authentication. The argument to this
-    # keyword must be "yes" or "no".
-    ##
+    ## Specifies whether to try public key authentication. The argument to this
+    ## keyword must be "yes" or "no".
     #PubkeyAuthentication no
 
-    ##
-    # Specifies what variables from the local environment should be sent to the
-    # server.
-    ##
+    ## Specifies what variables from the local environment should be sent to the
+    ## server.
     SendEnv LANG LC_*
 
-    ##
-    # If this flag is set to "yes", an ASCII art representation of the remote
-    # host key fingerprint is printed in addition to the hex fingerprint string
-    # at login and for unknown host keys.
-    ##
-    VisualHostKey yes
+    ## If this flag is set to "yes", an ASCII art representation of the remote
+    ## host key fingerprint is printed in addition to the hex fingerprint string
+    ## at login and for unknown host keys.
+    #VisualHostKey yes
+## #}}}
