--- a/home/config/sublime-text-2/Packages/User/.gitignore
+++ b/home/config/sublime-text-2/Packages/User/.gitignore
@@ -1,2 +1,6 @@
+#/
+## @author Joshua Spence
+## @file   ~/.config/sublime-text-2/Packages/User/.gitignore
+#\
+
 Package Control.last-run
-Side Bar.sublime-settings
