--- a/home/ssh/config
+++ b/home/ssh/config
@@ -1,214 +1,241 @@
 #/
+## Configuration file for {@link http://www.openssh.org/ SSH}.
+##
 ## @author Joshua Spence
-## @file ~/.ssh/config
+## @file   ~/.ssh/config
 #\
 
-## Personal #{{{
-    Host gunwatcher gunwatcher.joshuaspence.com
-        Hostname gunwatcher.joshuaspence.com
-        User ec2-user
-        IdentityFile ~/.ssh/ec2
-
-        ForwardAgent no
-        IdentitiesOnly yes
-        PasswordAuthentication no
-        PubkeyAuthentication yes
-
-    Host pear pear.joshuaspence.com
-        Hostname pear.joshuaspence.com
-        User ec2-user
-        IdentityFile ~/.ssh/ec2
-
-        ForwardAgent no
-        IdentitiesOnly yes
-        PasswordAuthentication no
-        PubkeyAuthentication yes
-## #}}}
-
-## Home #{{{
-    Host home home.ddns.joshuaspence.com
-        Hostname home.ddns.joshuaspence.com
-        User root
-        IdentityFile ~/.ssh/home
-
-        ForwardAgent yes
-        IdentitiesOnly yes
-        PasswordAuthentication no
-        PubkeyAuthentication yes
-## #}}}
-
-## Launchpad #{{{
-    Host launchpad bazaar.launchpad.net
-        Hostname bazaar.launchpad.net
-        User joshuaspence
-        IdentityFile  ~/.ssh/launchpad
-
-        ForwardAgent yes
-        IdentitiesOnly yes
-        PasswordAuthentication no
-        PubkeyAuthentication yes
-#}}}
-
-## GitHub #{{{
-    Host github git.github.com
+## Personal @{{{
+    Host git.github.com github
         Hostname git.github.com
         User git
-        IdentityFile  ~/.ssh/git.github.com
-
         ForwardAgent no
+
         IdentitiesOnly yes
         PasswordAuthentication no
         PubkeyAuthentication yes
-## #}}}
 
-## Freelancer #{{{
-    Host analytics01 analytics01.freelancer.com
-        HostName analytics01.freelancer.com
+    Host bazaar.launchpad.net launchpad
+        Hostname bazaar.launchpad.net
+        User joshuaspence
+        ForwardAgent no
+
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
+
+    ## EC2 @{{{
+        Host gunwatcher.ec2.joshuaspence.com gunwatcher.joshuaspence.com gunwatcher
+            Hostname gunwatcher.ec2.joshuaspence.com
+            User ec2-user
+            ForwardAgent no
+
+            IdentitiesOnly yes
+            PasswordAuthentication no
+            PubkeyAuthentication yes
+
+        Host pear.ec2.joshuaspence.com pear.joshuaspence.com pear
+            Hostname pear.ec2.joshuaspence.com
+            User ec2-user
+            ForwardAgent no
+
+            IdentitiesOnly yes
+            PasswordAuthentication no
+            PubkeyAuthentication yes
+    ## @}}}
+
+    ## Home @{{{
+        Host home.ddns.joshuaspence.com home
+            Hostname home.ddns.joshuaspence.com
+            User root
+            ForwardAgent yes
+
+            IdentitiesOnly yes
+            PasswordAuthentication no
+            PubkeyAuthentication yes
+    ## @}}}
+## @}}}
+
+## Freelancer @{{{
+    Host analytics01.freelancer.com analytics01
+        Hostname analytics01.freelancer.com
         User joshua
-        IdentityFile ~/.ssh/freelancer
-
         ForwardAgent yes
+
         IdentitiesOnly yes
         PasswordAuthentication no
         PubkeyAuthentication yes
 
-    Host local-staging josh.syd.local 10.0.0.2
-        HostName josh.syd.local
-        User freelancer
-        IdentityFile ~/.ssh/vagrant
-
-        ForwardAgent no
-        IdentitiesOnly yes
-        PasswordAuthentication no
-        PubkeyAuthentication yes
-
-    Host staging3 staging3.freelancer.com
-        HostName staging3.freelancer.com
-        User staging-josh
-        IdentityFile ~/.ssh/freelancer
-
-        ForwardAgent yes
-        IdentitiesOnly yes
-        PasswordAuthentication no
-        PubkeyAuthentication yes
-
-    Host db-slave-stats-tunnel
-        HostName analytics01.freelancer.com
-        User joshua
-        IdentityFile ~/.ssh/freelancer
-
-        ForwardAgent no
-        IdentitiesOnly yes
-        PasswordAuthentication no
-        PubkeyAuthentication yes
-
-        # Port forwarding
-        ExitOnForwardFailure yes
-        LocalForward 3306 db-slave-stats.freelancer.com:3306
-
-    Host freelancer-git git.freelancer.com
-        HostName git.freelancer.com
+    Host git.freelancer.com gitlab.freelancer.com freelancer-git
+        Hostname git.freelancer.com
         User git
-        IdentityFile ~/.ssh/git.freelancer.com
-
         ForwardAgent no
+
         IdentitiesOnly yes
         PasswordAuthentication no
         PubkeyAuthentication yes
-## #}}}
 
-## Global #{{{
-Host *
-    ## Specifies whether user authentication based on GSSAPI is allowed.
-    ##
-    ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    GSSAPIAuthentication no
+    Host staging3.freelancer.com staging3
+        Hostname staging3.freelancer.com
+        User staging-josh
+        ForwardAgent yes
 
-    ## If the network disappears your connection will hang, but if it then
-    ## re-appears with 10 minutes it will resume working.
-    ##
-    ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    ## #{{{
-        TCPKeepAlive no
-        ServerAliveInterval 60
-        ServerAliveCountMax 10
-    ## #}}}
+        IdentitiesOnly yes
+        PasswordAuthentication no
+        PubkeyAuthentication yes
 
-    ## If this flag is set to "yes", `ssh` will additionally check the host IP
-    ## address in the `~/.ssh/known_hosts` file. This allows ssh to detect if a
-    ## host key changed due to DNS spoofing. If the option is set to "no", the
-    ## check will not be executed.
-    CheckHostIP yes
+    ## Office @{{{
+        Host josh.syd.local local-staging
+            Hostname josh.syd.local
+            User freelancer
+            ForwardAgent yes
 
-    ## Specifies whether to use compression.
-    Compression no
+            IdentitiesOnly yes
+            PasswordAuthentication no
+            PubkeyAuthentication yes
+    ## @}}}
 
-    ## Enables the sharing of multiple sessions over a single network
-    ## connection. When set to "yes", `ssh` will listen for connections on a
-    ## control socket specified using the "ControlPath" argument. Additional
-    ## sessions can connect to this socket using the same "ControlPath" with
-    ## "ControlMaster" set to "no" (the default). These sessions will try to
-    ## reuse the master instance's network connection rather than initiating new
-    ## ones, but will fall back to connecting normally if the control socket
-    ## does not exist, or is not listening.
-    ##
-    ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
-    ## #{{{
-        #ControlMaster auto
-        #ControlPath /tmp/ssh_mux_%h_%p_%r
-        #ControlPersist 4h
-    ## #}}}
+    ## Tunnels @{{{
+        Host db-slave-stats-tunnel
+            Hostname analytics01.freelancer.com
+            User joshua
+            ForwardAgent no
 
-    ## Specifies whether the connection to the authentication agent (if any)
-    ## will be forwarded to the remote machine.
-    ForwardAgent no
+            IdentitiesOnly yes
+            PasswordAuthentication no
+            PubkeyAuthentication yes
 
-    ## Specifies whether X11 connections will be automatically redirected over
-    ## the secure channel and DISPLAY set.
-    ## #{{{
-        ForwardX11 no
-        ForwardX11Trusted yes
-    ## #}}}
+            # Port forwarding
+            ExitOnForwardFailure yes
+            LocalForward 3306 db-slave-stats.freelancer.com:3306
+    ## @}}}
+## @}}}
 
-    ## Specifies that `ssh` should only use the authentication identity files
-    ## configured in the SSH config files, even if `ssh-agent` offers more
-    ## identities. The argument to this keyword must be "yes" or "no". This
-    ## option is intended for situations where `ssh-agent` offers many different
-    ## identities.
-    #IdentitiesOnly no
+## Global @{{{
+    Host *
+        ## If this flag is set to "yes", `ssh` will additionally check the host
+        ## IP address in the `~/.ssh/known_hosts` file. This allows `ssh` to
+        ## detect if a host key changed due to DNS spoofing. If the option is
+        ## set to "no", the check will not be executed.
+        CheckHostIP yes
 
-    ## @todo
-    #NoHostAuthenticationForLocalhost yes
+        ## Specifies whether to use compression.
+        Compression no
 
-    ## Specifies whether to use password authentication. The argument to this
-    ## keyword must be "yes" or "no".
-    PasswordAuthentication yes
+        ## Enables the sharing of multiple sessions over a single network
+        ## connection. When set to "yes", `ssh` will listen for connections on a
+        ## control socket specified using the "ControlPath" argument. Additional
+        ## sessions can connect to this socket using the same "ControlPath" with
+        ## "ControlMaster" set to "no" (the default). These sessions will try to
+        ## reuse the master instance's network connection rather than initiating
+        ## new ones, but will fall back to connecting normally if the control
+        ## socket does not exist, or is not listening.
+        ##
+        ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
+        ## @{{{
+            ControlMaster auto
+            ControlPath /tmp/ssh_mux_%h_%p_%r
+            ControlPersist 4h
+        ## @}}}
 
-    ## Allow local command execution via the "LocalCommand" option or using the
-    ## `!command` escape sequence in `ssh`. The argument must be "yes" or "no".
-    PermitLocalCommand no
+        ## Specifies whether the connection to the authentication agent (if any)
+        ## will be forwarded to the remote machine.
+        ForwardAgent no
 
-    ## Specifies the protocol versions `ssh` should support in order of
-    ## preference. The possible values are "1" and "2". Multiple versions must
-    ## be comma-separated.
-    Protocol 2
+        ## Specifies whether X11 connections will be automatically redirected
+        ## over the secure channel and DISPLAY set.
+        ## @{{{
+            ForwardX11 no
+            ForwardX11Trusted yes
+        ## @}}}
 
-    ## Specifies whether to try public key authentication. The argument to this
-    ## keyword must be "yes" or "no".
-    #PubkeyAuthentication no
+        ## Specifies whether user authentication based on GSSAPI is allowed.
+        ##
+        ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
+        GSSAPIAuthentication no
 
-    ## Specifies what variables from the local environment should be sent to the
-    ## server.
-    SendEnv LANG LC_*
+        ## Specifies that `ssh` should only use the authentication identity
+        ## files configured in the SSH config files, even if `ssh-agent` offers
+        ## more identities. The argument to this keyword must be "yes" or "no".
+        ## This option is intended for situations where `ssh-agent` offers many
+        ## different identities.
+        #IdentitiesOnly no
 
-    ## @todo
-    #StrictHostKeyChecking ask
+        ## Specifies a file from which the user's DSA, ECDSA or RSA
+        ## authentication identity is read.
+        IdentityFile ~/.ssh/%h
 
-    ## @todo
-    #VerifyHostKeyDNS ask
+        ## This option disables host authentication for localhost.
+        NoHostAuthenticationForLocalhost yes
 
-    ## If this flag is set to "yes", an ASCII art representation of the remote
-    ## host key fingerprint is printed in addition to the hex fingerprint string
-    ## at login and for unknown host keys.
-    #VisualHostKey yes
-## #}}}
+        ## Specifies whether to use password authentication. The argument to
+        ## this keyword must be "yes" or "no".
+        PasswordAuthentication yes
+
+        ## Allow local command execution via the "LocalCommand" option or using
+        ## the `!command` escape sequence in `ssh`. The argument must be "yes"
+        ## or "no".
+        PermitLocalCommand no
+
+        ## Specifies the protocol versions `ssh` should support in order of
+        ## preference. The possible values are "1" and "2". Multiple versions
+        ## must be comma-separated.
+        Protocol 2
+
+        ## Specifies whether to try public key authentication. The argument to
+        ## this keyword must be "yes" or "no".
+        #PubkeyAuthentication no
+
+        ## Specifies what variables from the local environment should be sent to
+        ## the server.
+        SendEnv LANG LC_*
+
+        ## If the network disappears your connection will hang, but if it then
+        ## re-appears with 10 minutes it will resume working.
+        ##
+        ## @link http://blogs.perl.org/users/smylers/2011/08/ssh-productivity-tips.html
+        ## @{{{
+            ServerAliveCountMax 10
+            ServerAliveInterval 60
+            TCPKeepAlive no
+        ## @}}}
+
+        ## If this flag is set to "yes", `ssh` will never automatically add host
+        ## keys to the `~/.ssh/known_hosts` file, and refuses to connect to
+        ## hosts whose host key has changed. This provides maximum protection
+        ## against trojan horse attacks, though it can be annoying when the
+        ## `/etc/ssh/ssh_known_hosts` file is poorly maintained or when
+        ## connections to new hosts are frequently made. This option forces the
+        ## user to manually add all new hosts.
+        ##
+        ## If this flag is set to "no", `ssh` will automatically add new host
+        ## keys to the user known hosts files.
+        ##
+        ## If this flag is set to "ask", new host keys will be added to the user
+        ## known host files only after the user has confirmed that is what they
+        ## really want to do, and `ssh` will refuse to connect to hosts whose
+        ## host key has changed. The host keys of known hosts will be verified
+        ## automatically in all cases.
+        ##
+        ## The argument must be "yes", "no" or "ask". The default is "ask".
+        StrictHostKeyChecking ask
+
+        ## Specifies whether to verify the remote key using DNS and SSHFP
+        ## resource records.
+        ##
+        ## If this option is set to "yes", the client will implicitly trust keys
+        ## that match a secure fingerprint from DNS. Insecure fingerprints will
+        ## be handled as if this option was set to "ask".
+        ##
+        ## If this option is set to "ask", information on fingerprint match will
+        ## be displayed, but the user will still need to confirm new host keys
+        ## according to the "StrictHostKeyChecking" option.
+        ##
+        ## The argument must be "yes", "no" or "ask". The default is "no".
+        VerifyHostKeyDNS ask
+
+        ## If this flag is set to "yes", an ASCII art representation of the
+        ## remote host key fingerprint is printed in addition to the hex
+        ## fingerprint string at login and for unknown host keys.
+        VisualHostKey no
+## @}}}
