Cleaned up vim configuration a bit

--- a/home/vim/ftdetect/.gitignore
+++ b/home/vim/ftdetect/.gitignore
@@ -1,6 +1,6 @@
 #/
+## This file is just being used as a placeholder.
+##
 ## @author Joshua Spence
 ## @file   ~/.vim/ftdetect/.gitignore
 #\
-
-## Placeholder.
