Added placeholders in makefile for shell-utils and spark

--- a/modules/Makefile
+++ b/modules/Makefile
@@ -4,6 +4,7 @@ all: git-extras hosts hub
 submake = make --no-print-directory -C $(1) $(2)
 sudo-submake = sudo $(call submake,$(1),$(2))
 sudo-submake-if-no-command = command -v $(1) >/dev/null 2>&1 && echo "$(1) is installed" || $(call sudo-submake,$(2),$(3))
+todo = echo "TODO" && false
 
 #===============================================================================
 # Git-Extras
@@ -28,6 +29,14 @@ hub: /usr/local/bin/hub
 
 /usr/local/bin/hub: hub/hub
 	cd hub && sudo rake install
+
+.PHONY: shell-utils
+shell-utils:
+	@$(call todo)
+
+.PHONY: spark
+spark:
+	@$(call todo)
 
 .PHONY: vimpager
 vimpager:
