--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "home/oh-my-zsh"]
 	path = home/oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
+[submodule "home/shell/completion/ruby"]
+	path = home/shell/completion/ruby
+	url = git://github.com/mernen/completion-ruby.git
 [submodule "home/vim/bundle/vundle"]
 	path = home/vim/bundle/vundle
 	url = git://github.com/gmarik/vundle.git
@@ -10,21 +13,21 @@
 [submodule "modules/git-extras"]
 	path = modules/git-extras
 	url = git://github.com/visionmedia/git-extras.git
+[submodule "modules/git-sh"]
+	path = modules/git-sh
+	url = git://github.com/rtomayko/git-sh.git
 [submodule "modules/git-utils"]
 	path = modules/git-utils
 	url = git@github.com:joshuaspence/git-utils.git
 [submodule "modules/hub"]
 	path = modules/hub
 	url = git://github.com/defunkt/hub.git
-[submodule "modules/vimpager"]
-	path = modules/vimpager
-	url = git://github.com/rkitover/vimpager.git
-[submodule "home/shell/completion/ruby"]
-	path = home/shell/completion/ruby
-	url = git://github.com/mernen/completion-ruby.git
-[submodule "modules/spark"]
-	path = modules/spark
-	url = git://github.com/holman/spark.git
 [submodule "modules/rename"]
 	path = modules/rename
 	url = git://github.com/ap/rename.git
+[submodule "modules/spark"]
+	path = modules/spark
+	url = git://github.com/holman/spark.git
+[submodule "modules/vimpager"]
+	path = modules/vimpager
+	url = git://github.com/rkitover/vimpager.git
